<resources>
    <string name="app_name">Pansala</string>
    <string name="app_name_sinhala">පන්සල</string>
    <string name="wiharasthana">විහාරස්ථාන</string>
    <string name="wiharasthanaya">විහාරස්ථානය</string>
    <string name="search_wiharasthana">විහාරස්ථාන සොයන්න</string>
    <string name="add_wiharasthana">විහාරස්ථාන එකතු කරන්න</string>
    <string name="add_events">පිංකම් එකතු කරන්න</string>
    <string name="add_danaya">දානය එකතු කරන්න</string>
    <string name="view_wiharasthana">විහාරස්ථාන බලන්න</string>
    <string name="view_events">පිංකම් බලන්න</string>
    <string name="dayakayo">දායකයෝ</string>
    <string name="notice">පණිවිඩ</string>
    <string name="settings">සැකසුම්</string>
    <string name="about">යෙදුම ගැන</string>
    <string name="logout">ඉවත් වන්න</string>
    <string name="admin_hi_text">ස්වාගතං !!!</string>
    <string name="pinkam">පිංකම්</string>
    <string name="danaya">දානය</string>
    <string name="informations">තොරතුරු</string>
    <string name="register">එකතු කරන්න</string>
    <string name="ask_user_msg_for_temple">මෙම පන්සලේ ක්‍රියාකාරී තොරතුරු ලබා ගැනීමට කැමතිද ?</string>
    <string name="temple_images_collection">රූප එකතුව</string>
    <string name="wistharaya">විස්තරය</string>
    <string name="copyrigts_dushyantha_rubasinghe">2021 © Dushyantha Rubasinghe</string>
</resources>