<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserHomePage"
    android:background="@drawable/muragala_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_home_hi_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:gravity="left"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_weight="0.9"
                tools:ignore="RtlHardcoded" />

            <ImageView
                android:id="@+id/user_home_avatar"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:foregroundGravity="center"
                android:layout_weight="0.1"
                android:src="@drawable/person_t"
                tools:ignore="RtlHardcoded"
                android:contentDescription="avatar" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/user_home_temple_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:padding="10dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="140dp"
                        android:layout_marginStart="15dp"
                        android:src="@drawable/temple_t"
                        android:contentDescription="@string/wiharasthanaya" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wiharasthanaya"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/user_home_events_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:padding="10dp"
                    android:layout_marginStart="60dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="140dp"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/group_t"
                        android:contentDescription="@string/dayakayo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pinkam"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/white" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:id="@+id/user_home_temple_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/notices"
                        android:contentDescription="@string/notice" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="51dp"
                        android:layout_gravity="center"
                        android:text="@string/search_wiharasthana"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/gray"
        android:shadowColor="@color/white"
        android:shadowDx="2.5"
        android:shadowDy="2.5"
        android:shadowRadius="1.6"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="25dp"
        android:text="@string/copyrigts_dushyantha_rubasinghe" />

</RelativeLayout>