<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserTemple"
    android:paddingBottom="2dp"
    android:paddingLeft="2dp"
    android:background="@drawable/muragala_light"
    android:paddingRight="2dp"
    android:paddingTop="2dp">

    <TextView
        android:id="@+id/user_temple_hi_text"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:text=""
        android:gravity="left"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="17sp"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:id="@+id/user_temple_avatar"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_alignRight="@+id/user_temple_hi_text"
        android:layout_gravity="end"
        android:contentDescription="avatar"
        android:foregroundGravity="center"
        android:src="@drawable/person_t"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/user_temple_header_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wiharasthanaya"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:padding="5dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/user_temple_avatar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_below="@id/user_temple_header_name">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temple_images_collection"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="250dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/user_temple_image_1"
                                android:layout_width="200dp"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="10dp"
                                android:padding="5dp"/>

                            <ImageView
                                android:id="@+id/user_temple_image_2"
                                android:layout_width="200dp"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="10dp"
                                android:padding="5dp"/>

                            <ImageView
                                android:id="@+id/user_temple_image_3"
                                android:layout_width="200dp"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="10dp"
                                android:padding="5dp"/>

                        </LinearLayout>

                    </HorizontalScrollView>
                </LinearLayout>

                <ProgressBar
                    android:id="@+id/user_temple_progressBar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center|bottom"
                    android:layout_marginBottom="20dp"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wistharaya"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/user_temple_wistharaya"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="20dp"
                    android:lineSpacingExtra="5dp"
                    android:text=""
                    android:textStyle="bold"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

             </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>